# concurrentpp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  barrier.hpp  call_operator_traits.hpp  dynamic_task_queue.hpp  fake_semaphore.hpp  fixed_size_thread_pool.hpp  infinite_waiting_strategy.hpp  n_threaded_task_queue.hpp  parallel_for_each.hpp  pools.hpp  priority_task_queue_extension.hpp  semaphore.hpp  semaphore_validator.hpp  task_queue.hpp  task_queue_base.hpp  task_queue_extension.hpp  task_queues.hpp  timeout_waiting_strategy.hpp  unsafe_fifo_queue.hpp  unsafe_lifo_queue.hpp  unsafe_priority_queue.hpp  worker.hpp  workers_pool.hpp
test/: CMakeLists.txt  dynamic_fifo_task_queue_tests.cpp  main.cpp  n_threaded_fifo_task_queue_tests.cpp  n_threaded_priority_task_queue_tests.cpp  spy_thread.cpp  spy_thread.h  unsafe_priority_queue_tests.cpp  worker_tests.cpp
test/performance/: lifetime_logger.h  performance.cpp
test/unit/: dynamic_fifo_task_queue_tests.cpp  main.cpp  n_threaded_fifo_task_queue_tests.cpp  n_threaded_priority_task_queue_tests.cpp  parallel_for_each_tests.cpp  test_configuration.h  unsafe_priority_queue_tests.cpp  worker_tests.cpp
